--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stats</title>
+
+    <link rel="stylesheet" href="https://github.com/sk8267/st/blob/128f048055428bfe51edf5a57ec5f076a7752ea2/style.css">
+    
   </head>
   <body>
     <div class="stats">
@@ -92,5 +95,8 @@
         </div>
       </div>
     </div>
+
+    <script src="https://github.com/sk8267/sb/blob/1a9efe9b7f55b983e9a4bdc11b6049b0a0ba4a46/script.js"></script>
+    
   </body> 
   </html>
