--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stats</title>
 
-    <link rel="stylesheet" href="https://github.com/sk8267/st/blob/128f048055428bfe51edf5a57ec5f076a7752ea2/style.css">
+    <link rel="stylesheet" href="https://github.com/sk8267/st/style.css">
     
   </head>
   <body>
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <script src="https://github.com/sk8267/sb/blob/1a9efe9b7f55b983e9a4bdc11b6049b0a0ba4a46/script.js"></script>
+    <script src="https://github.com/sk8267/sb/script.js"></script>
     
   </body> 
   </html>
