--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stats</title>
 
-    <link rel="stylesheet" href="https://github.com/sk8267/st/style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/sk8267/st/main/style.css">
     
   </head>
   <body>
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <script src="https://github.com/sk8267/sb/script.js"></script>
+    <script src="https://raw.githubusercontent.com/sk8267/sb/main/script.js"></script>
     
   </body> 
   </html>
