--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <script src="https://raw.githubusercontent.com/sk8267/st/refs/heads/main/script.js"></script>
+    <script src="script.js"></script>
     
   </body> 
   </html>
