--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 <label for="shadowblade"> Shadowblade</label><br>
         </div>
       </div>
+
+      <div class="reset">
+        <div class="controls">
+          <button type="button" id="reset-btn">Reset</button>
+        </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
