--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3>1st level prepared spells</h3>
         <div class="controls">
           <input type="checkbox" id="burninghands" name="burninghands" value="Burning hands">
-<label for="burninghands"> Burning hands</label><br>
+<label for="burninghands"> Burning hands</label><a href="https://dnd5e.wikidot.com/spell:burning-hands" target="_blank">(x)</a><br>
           <input type="checkbox" id="comprelang" name="comprelang" value="Comprehend languages">
 <label for="comprelang"> Comprehend languages</label><br>
           <input type="checkbox" id="iceknife" name="iceknife" value="Ice knife">
