--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
         <h3>1st level prepared spells</h3>
         <div class="controls">
           <input type="checkbox" id="burninghands" name="burninghands" value="Burning hands">
-<label for="burninghands"> Burning hands</label><a href="https://dnd5e.wikidot.com/spell:burning-hands" target="_blank">(x)</a><br>
+<label for="burninghands"> Burning hands</label><a href="https://dnd5e.wikidot.com/spell:burning-hands" target="_blank"> (x)</a><br>
           <input type="checkbox" id="comprelang" name="comprelang" value="Comprehend languages">
-<label for="comprelang"> Comprehend languages</label><br>
+<label for="comprelang"> Comprehend languages</label><a href="https://dnd5e.wikidot.com/spell:comprehend-languages" target="_blank"> (x)</a><br>
           <input type="checkbox" id="iceknife" name="iceknife" value="Ice knife">
-<label for="iceknife"> Ice knife</label><br>
+<label for="iceknife"> Ice knife</label><a href="https://dnd5e.wikidot.com/spell:ice-knife" target="_blank"> (x)</a><br>
           <input type="checkbox" id="identify" name="identify" value="Identify">
-<label for="identify"> Identify</label><br>
+<label for="identify"> Identify</label><a href="https://dnd5e.wikidot.com/spell:identify" target="_blank"> (x)</a><br>
           <input type="checkbox" id="magearmour" name="magearmour" value="Mage armour">
-<label for="magearmour"> Mage armour</label><br>
+<label for="magearmour"> Mage armour</label><a href="https://dnd5e.wikidot.com/spell:mage-armor" target="_blank"> (x)</a><br>
           <input type="checkbox" id="magicmissile" name="magicmissile" value="Magic missile">
-<label for="magicmissile"> Magic missile</label><br>
+<label for="magicmissile"> Magic missile</label><a href="https://dnd5e.wikidot.com/spell:magic-missile" target="_blank"> (x)</a><br>
           <input type="checkbox" id="shield" name="shield" value="Shield">
-<label for="shield"> Shield</label><br>
+<label for="shield"> Shield</label><a href="https://dnd5e.wikidot.com/spell:shield" target="_blank"> (x)</a><br>
           <input type="checkbox" id="silverybarbs" name="silverybarbs" value="Silvery barbs">
-<label for="silverybarbs"> Silvery barbs</label><br>
+<label for="silverybarbs"> Silvery barbs</label><a href="https://dnd5e.wikidot.com/spell:silvery-barbs" target="_blank"> (x)</a><br>
         </div>
       </div>
       
@@ -89,12 +89,13 @@
         <h3>2nd level prepared spells</h3>
         <div class="controls">
           <input type="checkbox" id="mirrorimage" name="mirrorimage" value="Mirror image">
-<label for="mirrorimage"> Mirror image</label><br>
+<label for="mirrorimage"> Mirror image</label><a href="https://dnd5e.wikidot.com/spell:mirror-image" target="_blank"> (x)</a><br>
           <input type="checkbox" id="shadowblade" name="shadowblade" value="Shadowblade">
-<label for="shadowblade"> Shadowblade</label><br>
+<label for="shadowblade"> Shadowblade</label><a href="https://dnd5e.wikidot.com/spell:shadow-blade" target="_blank"> (x)</a><br>
         </div>
       </div>
 
+      <br>
       <div class="reset">
         <div class="controls">
           <button type="button" id="reset-btn">Reset</button>
